--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <h2>Título 01</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis cumque velit, natus harum, ea repellat possimus nulla labore et iure beatae neque nostrum perferendis ullam consequuntur quae repudiandae quas. Architecto?</p>
             </article>
+
+            <article>
+                <h2>Título 02</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ea beatae odit iusto nobis inventore harum nemo. Quasi omnis soluta possimus nihil suscipit. Ducimus aperiam aspernatur impedit aliquid eveniet esse!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam doloribus rerum repellendus animi quaerat error maxime nisi tempore laudantium tempora ipsam ratione ex cumque itaque nobis dolore, ut fuga dolorum.</p>
+            </article>
             
         </main>
         
