--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>Título de meu site</title>
+        <link rel="stylesheet" href="Estilos/style.css">
     </head>
 
     <body>
